--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@ body {
     color: white !important;
 }
 
+.button-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
