--- a/style.css
+++ b/style.css
@@ -222,4 +222,26 @@ body {
         max-width: 250px;
     }
 
+    .final-card-body {
+        width: 300px;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border-top-right-radius: 0;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+
+    .welcome {
+        width: 300px;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+
+    .text-decoration {
+        max-width: 250px;
+        margin-bottom: 20px;
+    }
+
 }
