--- a/style.css
+++ b/style.css
@@ -37,29 +37,28 @@ body {
 }
 
 .completeCard {
-    min-height: 330px;
+    min-height: 600px;
     display: flex;
     flex-direction: row;
-    border-radius: 20px;
 }
 
 .card-title {
-    width: 400px;
-    font-size: 1 rem !important;
-    height: 60px;
+    width: 800px;
+    height: 100px;
+    font-size: 30px !important;
+    font-weight: 700;
+
 }
 
 .navBar {
     margin-left: 0;
     background-color: rgba(34, 34, 70, 0.9);
-    width: 120px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    width: 250px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 .welcome {
-    background-image: url(img/brainbg.jpg);
-    background-size: cover;
     width: 400px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -72,9 +71,9 @@ body {
 .questions {
     background-image: url(img/brainbg.jpg);
     background-size: cover;
-    width: 500px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    width: 1000px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,18 +83,19 @@ body {
 .final-card-body {
     background-image: url(img/brainbg.jpg);
     background-size: cover;
-    width: 500px;
+    width: 1000px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column; 
+    font-size: 30px;
 }
 
 .final-card-body img {
-    height: 90px;
-    margin-bottom: 10px;
+    height: 190px;
+    margin-bottom: 35px;
 } 
 
 .logo-size {
@@ -104,18 +104,18 @@ body {
 }
 
 .logo-size img {
-    height: 60px;
-    margin-top: 10px;
+    height: 120px;
+    margin-top: 30px;
 }
 
 .text-decoration h1 {
     text-align: center;
-    font-size: 30px;
+    font-size: 60px;
 }
 
 .text-decoration h3 {
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .table {
@@ -135,12 +135,20 @@ body {
     --bs-card-spacer-y: 0.5rem !important;
     margin-top: 4px;
     margin-bottom: 4px;
-    width: 250px;
+    width: 650px;
+    height: 60px !important;
     --bs-card-border-radius: 0 !important ;
 }
 
 .card:hover {
     cursor: pointer;
+}
+
+.card-body {
+    font-size: 25px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
 }
 
 .btn a {
@@ -152,8 +160,21 @@ body {
     height: 20px;
 }
 
+.small-button {
+    height: 60px !important;
+    width: 100px;
+}
+
+.big-button {
+    width: 200px !important;
+    height: 50px;
+    font-size: 20px !important;
+}
+
 .card-footer {
-    width: 400px;
+    width: 950px;
+    font-size: 30px;
+    padding-top: 60px;
 }
 
 .alignment {
@@ -171,8 +192,82 @@ body {
 .disable-click {
     z-index: 1;
     position: absolute;
-    width: 400px;
-    height: 200px;
+    width: 950px;
+    height: 272px;
+}
+
+.progress {
+    width: 950px;
+    height: 30px!important;
+    font-size: 20px!important;
+    margin-bottom: 50px;
+}
+
+@media(max-width: 1270px) {
+    .completeCard {
+        min-height: 500px;
+
+    }
+
+    .navBar {
+        width: 200px;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+
+    .questions {
+        width: 800px;
+        border-bottom-right-radius: 8px;
+        border-top-right-radius: 8px;
+    }
+
+    .card-footer {
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    
+    .progress {
+        width: 300px !important;
+    }
+
+    .center {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-title {
+        max-width: 260px;
+        height: 100px;
+        margin-top: 20px;
+    }
+
+    .card-footer {
+        max-width: 250px;
+    }
+
+    .final-card-body {
+        width: 300px;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border-top-right-radius: 0;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+
+    .welcome {
+        width: 600px;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+
+    .text-decoration {
+        max-width: 500px;
+        margin-bottom: 20px;
+    }
+
 }
 
 @media(max-width: 630px) {
@@ -246,3 +341,4 @@ body {
     }
 
 }
+
