--- a/style.css
+++ b/style.css
@@ -322,6 +322,14 @@ body {
         margin-bottom: 20px;
     }
 
+    .text-decoration h1 {
+        font-size: 45px;
+    }
+
+    .text-decoration h3 {
+        font-size: 35px;
+    }
+
     .small-button {
         height: 50px !important;
         width: 75px;
@@ -572,11 +580,11 @@ body {
     }
 
     .text-decoration h1 {
-        font-size: 40px;
+        font-size: 30px;
     }
 
     .text-decoration h3 {
-        font-size: 30px;
+        font-size: 20px;
     }
 
     .small-button {
